<resources>
    <string name="app_name">Cloud Based Online Journal</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_create">Create Note</string>
    <string name="action_edit">Edit Note</string>
    <string name="action_delete">Delete Note</string>
    <string name="action_upload">Upload Docs</string>
    <string name="action_deldoc">Delete Docs</string>
    <string name="action_alert">Check Remainders</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_exit">Exit App</string>
    <string name="Splash_note">SplashScreen</string>


</resources>
