<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_create" android:title="@string/action_create"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_edit" android:title="@string/action_edit"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_delete" android:title="@string/action_delete"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_upload" android:title="@string/action_upload"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_deldoc" android:title="@string/action_deldoc"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_alert" android:title="@string/action_alert"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_login" android:title="@string/action_login"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_logout" android:title="@string/action_logout"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_exit" android:title="@string/action_exit"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
